6/27/2025 #1:
- Merged the dev branch into main, containing a giant list of new features and changes
- Updated the spatial audio module to use "spaudiopy" for proper HRTF audio support when navigating to POIs, getting pings for the storm, and gameobjects.

4/15/2025 #1:
- Added missing items and the new Reload Slurp Rush map to the POI selector

4/4/2025 #1:
- The loading of landmarks and main POIs from the API was mistakenly reverted. This has been fixed.

4/3/2025 #1:
- Fix the OG gamemodes for the new season

4/2/2025 #1:
- FA11y can now download and display a changelog of updates
- Fixed the "FortniteManager.py" script as it broke after UI backend changes